fix: update scoop apps import command and enhance userChrome.css for better visibility

--- a/shared/config/firefox/userChrome.css
+++ b/shared/config/firefox/userChrome.css
@@ -1,5 +1,9 @@
-@media not -moz-pref('zen.workspaces.show-workspace-indicator') {
-  .zen-current-workspace-indicator {
-    display: none !important;
-  }
+/* Hide workspace icon */
+.zen-current-workspace-indicator {
+  display: none !important;
+}
+
+/* Hide top new tab icon */
+#tabbrowser-arrowscrollbox-periphery {
+  display: none !important;
 }
